--- a/views/application.ejs
+++ b/views/application.ejs
@@ -8,15 +8,15 @@
     <section class="intro3">
         <div class="first">
             <p class="notapp">
-                The Program in Algorithmic and Combinatorial Thinking is not accepting applications for Summer 2023. The application link for Summer 2024 will be released Winter 2023.
-                <!-- The Program in Algorithmic and Combinatorial Thinking is now accepting applications for Summer 2023. The application form can be found at:  -->
+                <!-- The Program in Algorithmic and Combinatorial Thinking is not accepting applications for Summer 2023. The application link for Summer 2024 will be released Winter 2023. -->
+                The Program in Algorithmic and Combinatorial Thinking is now accepting applications for Summer 2024. The application form can be found at: 
             </p>
 
-            <!-- <p class="app">
-                <a href="https://applypact.com/apply/6">
-                    https://applypact.com/apply/6
+            <p class="app">
+                <a href="https://applypact.com/apply/7">
+                    https://applypact.com/apply/7
                 </a>
-            </p>  -->
+            </p> 
         </div>
 
         <div class="second">
@@ -26,9 +26,9 @@
                 </h3>
                 <div>
                     <ul>
-                        <li>Virtual fees: The fee for each admitted student is \$1850 (\$1950 for international students). </li> 
+                        <li>Virtual fees: The fee for each admitted student is $1,925 ($1950 for international students). </li> 
                         <!-- ^^ also on FAQ page!!! -->
-                        <li>In-person (if we are able to offer): Tuition will be decided once we get a confirmation.</li>
+                        <li>In-person: The fee for each admitted student is $3,950 + cost for housing, etc.</li>
                     </ul>
                     <p>We have some financial support available and will try our best to see that admitted students shall not be turned away due to financial constraints (justification required), so we strongly encourage anyone interested in the program to apply.
                     <!-- fees also mentioned in FAQ --></p>
@@ -47,17 +47,19 @@
                     <p>
                         <!-- We will be doing rolling admissions, i.e., we will review applications every few weeks.  -->
                       
-                        <!-- <span class="strikethrough">
+                        <!-- <span class="strikethrough"> -->
                         All applications received before 
-                        March 10, 2023</span>
-                        <span class="strikethrough">March 24, 2023
-                        will receive full consideration. </span> -->
+                        March 10, 2024
+                        <!-- </span> -->
+                        <!-- <span class="strikethrough">March 24, 2023 -->
+                        will receive full consideration. 
+                        <!-- </span> -->
                         <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
                         <!-- <br>
                         <strong style="font-size: 1.3rem;">
                        We are still accepting applications for Summer 2023, so please apply soon. </strong> -->
                         <!-- <br> -->
-                       <strong>We are not accepting any more applications for Summer 2023.</strong>
+                       <!-- <strong>We are not accepting any more applications for Summer 2023.</strong> -->
                     </p>
                 </div>
     
@@ -100,7 +102,7 @@
                 <i class="fas fa-user-edit"></i>
             </div>
     
-            <div class="req">
+            <!-- <div class="req">
                 <h3>
                     4.&nbsp;Official Transcript
                 </h3>
@@ -108,7 +110,7 @@
                     Guidance counselor must email an official transcript to the email address: <a href="mailto:summertcs@gmail.com">summertcs@gmail.com</a>. In the Subject, please include “Transcript for [Applicant Name]”. If your school does not email transcripts, please have them mail hard copies to the attention of Prof. Rajiv Gandhi at 322 Business and Science Building, Dept of Computer Science, Rutgers University – Camden, Camden, NJ 08102.
                 </p>
                 <i class="far fa-newspaper"></i>
-            </div>
+            </div> -->
         </div>
         
         <p>
