--- a/views/application.ejs
+++ b/views/application.ejs
@@ -45,7 +45,7 @@
                 </h3>
                 <div>
                     <p>
-                        <!-- We will be doing rolling admissions, i.e., we will review applications every few weeks.  -->
+                        We will be doing rolling admissions, i.e., we will review applications every few weeks. 
                       
                         <!-- <span class="strikethrough"> -->
                         All applications received before 
