--- a/views/logistics.ejs
+++ b/views/logistics.ejs
@@ -16,8 +16,8 @@
             <h2><i class="fas fa-search-location"></i></h2>
             <h2>Location</h2>
             
-            <p>PACT will surely have a virtual component this year, as it did last year. Platforms used are Zoom, Gradescope, and Discord. </p>
-            <p>There will be an in-person component which will be held on the UPenn campus.</p>
+            <p>PACT will have a virtual component this year, as it did last year. Platforms used are Zoom, Gradescope, and Discord. </p>
+            <p>There will also be an in-person component which will be held on the UPenn campus.</p>
         </div>
         <div>
             <h2><i class="fas fa-clock"></i></h2>
