first application deadline change, faq addition 1

--- a/views/application.ejs
+++ b/views/application.ejs
@@ -49,11 +49,12 @@
                       
                         <!-- <span class="strikethrough"> -->
                         All applications received before 
-                        March 10, 2024
                         <!-- </span> -->
-                        <!-- <span class="strikethrough">March 24, 2023 -->
+                        <span class="strikethrough">March 10, 2024</span>
+                        
+                        March 30, 2024 
                         will receive full consideration. 
-                        <!-- </span> -->
+                        
                         <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
                         <!-- <br>
                         <strong style="font-size: 1.3rem;">
