--- a/public/css/faq.css
+++ b/public/css/faq.css
@@ -6,6 +6,14 @@
     list-style-type: none;
 }
 
+.faq h2 {
+    padding: 40px 0;
+    background-color: var(--grey);
+    color: var(--off-white);
+    text-align: center;
+    border-radius: 10px;
+}
+
 .toggle {
     display: flex;
     justify-content: space-between;
