--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -5,8 +5,24 @@
 </header>
 
 <div class="container">
+    
     <ul class="faq">
+        <h2>General FAQ</h2>
         <% faq.forEach(f => { %> 
+            <li>
+                <div class="toggle">
+                    <h3><strong>Q.</strong> <%= f.question %></h3>
+                    <i class="fas fa-plus"></i>
+                </div>
+                <p><strong>A.</strong> <%- f.answer %></p>
+            </li>
+        <% }) %> 
+    </ul>
+
+
+    <ul class="faq">
+    <h2>Residential Life + On-Campus Experience FAQ</h2>
+        <% bold_faq.forEach(f => { %> 
             <li>
                 <div class="toggle">
                     <h3><strong>Q.</strong> <%= f.question %></h3>
