--- a/views/logistics.ejs
+++ b/views/logistics.ejs
@@ -17,7 +17,7 @@
             <h2>Location</h2>
             
             <p>PACT will have a virtual component this year, as it did last year. Platforms used are Zoom, Gradescope, and Discord. </p>
-            <p>There will also be an in-person component which will be held on the UPenn campus.</p>
+            <p>There will also be an in-person component which will be held on the UPenn campus. For more details, see the <strong>Residential Life + On-Campus Experience FAQ</strong> on the <strong><a href="/faq">FAQ page</a></strong>.</p>
         </div>
         <div>
             <h2><i class="fas fa-clock"></i></h2>
