--- a/views/application.ejs
+++ b/views/application.ejs
@@ -47,15 +47,14 @@
                     <p>
                         We will be doing rolling admissions, i.e., we will review applications every few weeks. 
                       
-                        <!-- <span class="strikethrough"> -->
-                        All applications received before 
-                        <!-- </span> -->
-                        <span class="strikethrough">March 10, 2024</span>
+                        <span class="strikethrough">All applications received before 
+                        
+                        <!-- <span class="strikethrough">March 10, 2024</span> -->
                         
                         March 30, 2024 
-                        will receive full consideration. 
+                        will receive full consideration.</span>
                         
-                        <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
+                        We are still accepting applications and will continue to accept until all seats are taken.
                         <!-- <br>
                         <strong style="font-size: 1.3rem;">
                        We are still accepting applications for Summer 2023, so please apply soon. </strong> -->
