--- a/views/application.ejs
+++ b/views/application.ejs
@@ -9,12 +9,12 @@
         <div class="first">
             <p class="notapp">
                 <!-- The Program in Algorithmic and Combinatorial Thinking is not accepting applications for Summer 2023. The application link for Summer 2024 will be released Winter 2023. -->
-                The Program in Algorithmic and Combinatorial Thinking is now accepting applications for Summer 2024. The application form can be found at: 
+                The Program in Algorithmic and Combinatorial Thinking is now accepting applications for Summer 2025. The application form can be found at: 
             </p>
 
             <p class="app">
-                <a href="https://applypact.com/apply/7">
-                    https://applypact.com/apply/7
+                <a href="https://applypact.com/apply/8">
+                    https://applypact.com/apply/8
                 </a>
             </p> 
         </div>
@@ -25,10 +25,12 @@
                     Fees
                 </h3>
                 <div>
+                    <p>There is an application fee of $85 that must be paid before we process your application.</p>
                     <ul>
-                        <li>Virtual fees: The fee for each admitted student is $1,925 ($2,025 for international students). </li> 
+                        <li>Virtual fees: The fee for each admitted student is $1,975 ($2,075 for international students). </li> 
                         <!-- ^^ also on FAQ page!!! -->
-                        <li>In-person: The fee for each admitted student is $3,950 + cost for housing, etc.</li>
+                        <li>In-person commuter: The fee for each admitted student is $4,100.</li>
+                        <li>In-person residential: The fee for each admitted student is $4,100 for tuition and $6,295 for housing, meals, etc.</li>
                     </ul>
                     <p>We have some financial support available and will try our best to see that admitted students shall not be turned away due to financial constraints (justification required), so we strongly encourage anyone interested in the program to apply.
                     <!-- fees also mentioned in FAQ --></p>
@@ -47,14 +49,16 @@
                     <p>
                         We will be doing rolling admissions, i.e., we will review applications every few weeks. 
                       
-                        <span class="strikethrough">All applications received before 
+                        <!-- <span class="strikethrough"> -->
+                            All applications received before 
                         
                         <!-- <span class="strikethrough">March 10, 2024</span> -->
                         
-                        March 30, 2024 
-                        will receive full consideration.</span>
+                        March 16, 2025
+                        will receive full consideration.
+                        <!-- </span> -->
                         
-                        We are still accepting applications and will continue to accept until all seats are taken.
+                        <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
                         <!-- <br>
                         <strong style="font-size: 1.3rem;">
                        We are still accepting applications for Summer 2023, so please apply soon. </strong> -->
@@ -102,15 +106,16 @@
                 <i class="fas fa-user-edit"></i>
             </div>
     
-            <!-- <div class="req">
+            <div class="req">
                 <h3>
-                    4.&nbsp;Official Transcript
+                    4.&nbsp;Application Fee
                 </h3>
                 <p>
-                    Guidance counselor must email an official transcript to the email address: <a href="mailto:summertcs@gmail.com">summertcs@gmail.com</a>. In the Subject, please include “Transcript for [Applicant Name]”. If your school does not email transcripts, please have them mail hard copies to the attention of Prof. Rajiv Gandhi at 322 Business and Science Building, Dept of Computer Science, Rutgers University – Camden, Camden, NJ 08102.
+                    There is an application fee of $85.
                 </p>
                 <i class="far fa-newspaper"></i>
-            </div> -->
+                <!-- <i class="fa-solid fa-dollar-sign"></i> -->
+            </div>
         </div>
         
         <p>
