--- a/views/application.ejs
+++ b/views/application.ejs
@@ -52,9 +52,9 @@
                         <!-- <span class="strikethrough"> -->
                             All applications received before 
                         
-                        <!-- <span class="strikethrough">March 10, 2024</span> -->
+                        <span class="strikethrough">March 16, 2025</span>
                         
-                        March 16, 2025
+                        March 30, 2025
                         will receive full consideration.
                         <!-- </span> -->
                         
