--- a/views/application.ejs
+++ b/views/application.ejs
@@ -50,15 +50,15 @@
                         We will be doing rolling admissions, i.e., we will review applications every few weeks. 
                       
                         <!-- <span class="strikethrough"> -->
-                            All applications received before 
+                            <!-- All applications received before 
                         
                         <span class="strikethrough">March 16, 2025</span>
                         
                         March 30, 2025
-                        will receive full consideration.
+                        will receive full consideration. -->
                         <!-- </span> -->
                         
-                        <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
+                        We are still accepting applications and will continue to accept until all seats are taken.
                         <!-- <br>
                         <strong style="font-size: 1.3rem;">
                        We are still accepting applications for Summer 2023, so please apply soon. </strong> -->
