bold deadline message

--- a/views/application.ejs
+++ b/views/application.ejs
@@ -58,7 +58,8 @@
                         will receive full consideration. -->
                         <!-- </span> -->
                         
-                        We are still accepting applications and will continue to accept until all seats are taken.
+                        <strong>We are still accepting applications and will continue to accept until all seats are taken.</strong>
+
                         <!-- <br>
                         <strong style="font-size: 1.3rem;">
                        We are still accepting applications for Summer 2023, so please apply soon. </strong> -->
