close summer 2025 applications

--- a/views/application.ejs
+++ b/views/application.ejs
@@ -9,14 +9,15 @@
         <div class="first">
             <p class="notapp">
                 <!-- The Program in Algorithmic and Combinatorial Thinking is not accepting applications for Summer 2023. The application link for Summer 2024 will be released Winter 2023. -->
-                The Program in Algorithmic and Combinatorial Thinking is now accepting applications for Summer 2025. The application form can be found at: 
+                The Program in Algorithmic and Combinatorial Thinking is no longer accepting applications for Summer 2025.
+                <!-- The Program in Algorithmic and Combinatorial Thinking is now accepting applications for Summer 2025. The application form can be found at:  -->
             </p>
 
-            <p class="app">
+            <!-- <p class="app">
                 <a href="https://applypact.com/apply/8">
                     https://applypact.com/apply/8
                 </a>
-            </p> 
+            </p>  -->
         </div>
 
         <div class="second">
@@ -58,7 +59,7 @@
                         will receive full consideration. -->
                         <!-- </span> -->
                         
-                        <strong>We are still accepting applications and will continue to accept until all seats are taken.</strong>
+                        <!-- <strong>We are still accepting applications and will continue to accept until all seats are taken.</strong> -->
 
                         <!-- <br>
                         <strong style="font-size: 1.3rem;">
