--- a/public/css/students.css
+++ b/public/css/students.css
@@ -53,6 +53,104 @@
     box-shadow: 0 0 15px 7px rgba(166, 167, 202, 0.7);
 }
 
+/* -----------------------SLIDESHOW--------------------- */
+.group .frame {
+    max-width: 100%;
+    max-height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slideshow {
+    padding: 0px 10px;
+    display: inline-block;
+    flex-direction: column;
+
+}
+
+.slides {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    padding-inline-start: 0px;
+}
+
+.slide {
+    height: 100%;
+    width: 100%;
+    max-width: fit-content;
+    position: relative;
+    opacity: 0;
+    transition: 100ms opacity ease-in-out;
+    transition-delay: 100ms;
+    display: none;
+    justify-content: center;
+}
+
+.slide[data-active] {
+    display: flex;
+    opacity: 1;
+    z-index: 1;
+    transition-delay: 0ms;
+}
+
+.slide > img {
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Slide buttons */
+.carousel-button {
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: var(--button-size-large);
+    height: var(--button-size-large);
+    border: none;
+    border-radius: 50%;
+    background-color: transparent;
+    cursor: pointer;
+}
+.carousel-button:hover {
+    background-color: rgba(124, 124, 145, 0.4);
+    transition: transform 100ms, background-color 100ms;
+}
+.carousel-button > svg {
+    height: var(--button-icon-size-large);
+    width: var(--button-icon-size-large);
+    fill: rgb(172, 166, 166);
+}
+
+/* Navigation Buttons */
+.navigation {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.circle {
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+    background-color: azure;
+    background-color: rgba(124, 124, 145, 0.4);
+    border-radius: 50%;
+    transition: transform 100ms, background-color 100ms;
+    transform: scale(0.75);
+}
+.circle[data-active] {
+    background-color: rgb(172, 166, 166);
+    cursor: default;
+    transform: scale(1);
+}
+
 /* -----------------------MEDIA QUERIES--------------------- */
 
 @media only screen and (max-width: 1000px) {
