--- a/views/application.ejs
+++ b/views/application.ejs
@@ -9,15 +9,15 @@
         <div class="first">
             <p class="notapp">
                 <!-- The Program in Algorithmic and Combinatorial Thinking is not accepting applications for Summer 2023. The application link for Summer 2024 will be released Winter 2023. -->
-                The Program in Algorithmic and Combinatorial Thinking is no longer accepting applications for Summer 2025.
-                <!-- The Program in Algorithmic and Combinatorial Thinking is now accepting applications for Summer 2025. The application form can be found at:  -->
+                <!-- The Program in Algorithmic and Combinatorial Thinking is no longer accepting applications for Summer 2025. -->
+                The Program in Algorithmic and Combinatorial Thinking is now accepting applications for Summer 2026. The application form can be found at: 
             </p>
 
-            <!-- <p class="app">
-                <a href="https://applypact.com/apply/8">
-                    https://applypact.com/apply/8
+            <p class="app">
+                <a href="https://applypact.com/apply/9 ">
+                    https://applypact.com/apply/9 
                 </a>
-            </p>  -->
+            </p> 
         </div>
 
         <div class="second">
@@ -26,12 +26,12 @@
                     Fees
                 </h3>
                 <div>
-                    <p>There is an application fee of $85 that must be paid before we process your application.</p>
+                    <p>There is an application fee of $90 that must be paid before we process your application.</p>
                     <ul>
-                        <li>Virtual fees: The fee for each admitted student is $1,975 ($2,075 for international students). </li> 
+                        <li>Virtual fees: The fee for each admitted student is $2,050 ($2,150 for international students). </li> 
                         <!-- ^^ also on FAQ page!!! -->
-                        <li>In-person commuter: The fee for each admitted student is $4,100.</li>
-                        <li>In-person residential: The fee for each admitted student is $4,100 for tuition and $6,295 for housing, meals, etc.</li>
+                        <li>In-person commuter: The fee for each admitted student is $4,215.</li>
+                        <li>In-person residential: The fee for each admitted student is $4,215 for tuition and $6,480 for housing, meals, etc.</li>
                     </ul>
                     <p>We have some financial support available and will try our best to see that admitted students shall not be turned away due to financial constraints (justification required), so we strongly encourage anyone interested in the program to apply.
                     <!-- fees also mentioned in FAQ --></p>
@@ -48,15 +48,17 @@
                 </h3>
                 <div>
                     <p>
-                        We will be doing rolling admissions, i.e., we will review applications every few weeks. 
+                        <!-- We will be doing rolling admissions, i.e., we will review applications every few weeks.  -->
                       
                         <!-- <span class="strikethrough"> -->
-                            <!-- All applications received before 
+                            All applications received before 
                         
-                        <span class="strikethrough">March 16, 2025</span>
+                        <!-- <span class="strikethrough">March 16, 2025</span> -->
                         
-                        March 30, 2025
-                        will receive full consideration. -->
+                        March 9, 2026
+                        will receive full consideration.
+
+                        <br></br> The in-person program has a limited capacity. If all seats become filled, any remaining applications received before the deadline will be considered for the virtual program but kept on a waitlist for the in-person program, should some seats become available.
                         <!-- </span> -->
                         
                         <!-- <strong>We are still accepting applications and will continue to accept until all seats are taken.</strong> -->
@@ -113,7 +115,7 @@
                     4.&nbsp;Application Fee
                 </h3>
                 <p>
-                    There is an application fee of $85.
+                    There is an application fee of $90.
                 </p>
                 <i class="far fa-newspaper"></i>
                 <!-- <i class="fa-solid fa-dollar-sign"></i> -->
