--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -16,7 +16,8 @@
         </p>
 
         <p>
-            During some years, there is an advanced group consisting of incoming graduate students with significant experience in the field. <br> <br> Starting 2023, students in Asia may also participate in the PACT Asia program which will be offered at a time that works well for students in Asian time zones. 
+            During some years, there is an advanced group consisting of incoming graduate students with significant experience in the field. 
+            <!-- <br> <br> Starting 2023, students in Asia may also participate in the PACT Asia program which will be offered at a time that works well for students in Asian time zones.  -->
         </p>
     </section>
     
@@ -61,7 +62,7 @@
             </p>
         </div>
     </section>
-    <section class="asia">
+    <!-- <section class="asia">
         <div>
             <a href="https://pact-asia.com/"><h2>PACT Asia</h2></a>
 
@@ -73,7 +74,7 @@
                 Though sharing the same instructor and being run by past PACT students, PACT Asia is largely independent of PACT, with different enrollment procedures, TAs, and logistics in general. More information can be found on PACT Asia’s <a href="https://pact-asia.com/">website</a> and their official account on WeChat.                 
             </p>
         </div>
-    </section>
+    </section> -->
 
 
     <div class="years">
