Add email for questions

--- a/views/logistics.ejs
+++ b/views/logistics.ejs
@@ -26,6 +26,10 @@
             <p>The program will start at 9:30AM EDT.</p>
             <!-- <p>Group I students meet in the afternoon, and Group II students meet in the morning. Recitations are in the evening. When in-person, meetings take place each weekday from 9:30am-4:30pm, except on nationally observed holidays.</p> -->
         </div>
+
+        <p>
+            <strong>Questions: Please send email to summertcs@gmail.com.</strong>
+        </p>
     </section>
 
 </div>
