--- a/views/application.ejs
+++ b/views/application.ejs
@@ -27,7 +27,7 @@
                 </h3>
                 <div>
                     <p>There is an application fee of $90 that must be paid before we process your application.</p>
-                    <p>After you fill out the application, you will receive an email with instructions on how to make the application fee payment.</p>
+                    <p>After you fill out the application, you will receive an email with instructions on how to make the application fee payment</p>
                     <ul>
                         <li>Virtual fees: The fee for each admitted student is $2,050 ($2,150 for international students). </li> 
                         <!-- ^^ also on FAQ page!!! -->
@@ -124,7 +124,7 @@
         </div>
         
         <p>
-            Questions: Please send email to summertcs@gmail.com.
+            <strong>Questions: Please send email to summertcs@gmail.com.</strong>
         </p>
 
     </section>
