Make email link clickable

--- a/views/application.ejs
+++ b/views/application.ejs
@@ -124,7 +124,7 @@
         </div>
         
         <p>
-            <strong>Questions: Please send email to summertcs@gmail.com.</strong>
+            <strong>Questions: Please send email to <a href="mailto:summertcs@gmail.com">summertcs@gmail.com</a>.</strong>
         </p>
 
     </section>
