--- a/public/css/application.css
+++ b/public/css/application.css
@@ -137,6 +137,11 @@
 .reqs > p {
     padding: 50px 0;
     text-align: center;
+    color: var(--grey);
+}
+
+.reqs p a {
+    color: var(--lightish-grey);
 }
 
 /* -----------------MEDIA QUERIES----------------- */
