Information banner on header

--- a/views/application.ejs
+++ b/views/application.ejs
@@ -26,8 +26,7 @@
                     Fees
                 </h3>
                 <div>
-                    <p>There is an application fee of $90 that must be paid before we process your application.</p>
-                    <p>After you fill out the application, you will receive an email with instructions on how to make the application fee payment</p>
+                    <p>There is an application fee of $90 that must be paid before we process your application. After you fill out the application, you will receive an email with instructions on how to make the application fee payment</p>
                     <ul>
                         <li>Virtual fees: The fee for each admitted student is $2,050 ($2,150 for international students). </li> 
                         <!-- ^^ also on FAQ page!!! -->
