--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,6 +35,12 @@
 <body>
 
     <nav>
+        <div class="announcement-banner">
+            <p><strong>PACT Information Sessions (anyone is welcome to attend)</strong></p>
+             <span class="break"> | </span>
+            <p><strong>Dec 13 @ 9pm ET • Jan 11 @ 9pm ET • <em>Zoom link will be posted soon</em></strong></p>
+        </div>
+
         <a href="/" class="logo">PACT</a>
 
         <div class="nav-item ham">
@@ -67,6 +73,7 @@
                 <a href="/students">Students</a>
             </li> -->
         </ul>
+
     </nav>
 
     <div class="spacer"></div>
