--- a/public/css/partials.css
+++ b/public/css/partials.css
@@ -6,6 +6,7 @@ html, body {
     --trans-blue: rgba(15, 16, 83, 0.7);
     --actual-blue: rgba(15, 16, 83);
     --trans:  rgba(15, 16, 83, 0);
+    --bright-yellow: rgba(255, 234, 0, 0.9);
     --off-white: #dddddd;
     --white: #eeeeee;
     --grey: #444444;
@@ -38,6 +39,57 @@ h2, h3, h4, h5, h6 {
 p, a, ul, li {
     font-family: var(--para);
 }
+
+/* ---------------ANNOUNCEMENT BANNER--------------- */
+.announcement-banner {
+    width: 100%;
+    background-color: var(--bright-yellow);
+    /* background-color: var(--actual-blue); */
+    z-index: 10;
+    color: var(--black);
+    /* color: var(--off-white); */
+    font-size: clamp(0.8rem, 1.4vw, 1.1rem);
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    gap: 5px;
+    white-space: nowrap;
+}
+
+.announcement-banner > p {
+    margin: 10px;
+}
+
+.break {
+    display: none;
+    display: inline;
+    width: auto;
+
+}
+
+@media (max-width: 810px) {
+    .announcement-banner {
+        white-space: normal;
+        flex-wrap: wrap;
+        text-align: center;
+        gap: 0px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    .announcement-banner > p {
+        margin: 0px;
+    }
+
+    .break {
+        display: block;     /* becomes a line break */
+        width: 100%;
+        height: 0;
+        visibility: hidden;
+    }
+}
+
+
 
 /* ---------------NAV--------------- */
 nav {
