Add Dec 13, 2025 Information Session Link

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,8 +38,15 @@
         <div class="announcement-banner">
             <p><strong>PACT Information Sessions (anyone is welcome to attend)</strong></p>
              <span class="break"> | </span>
-            <p><strong>Dec 13 @ 9pm ET • Jan 11 @ 9pm ET • <em>Zoom link will be posted soon</em></strong></p>
+            <!-- <p><strong>Dec 13 @ 9pm ET • Jan 11 @ 9pm ET • <em>Zoom link will be posted soon</em></strong></p> -->
+            <p><strong>
+                Dec 13 @ 9pm ET • Jan 11 @ 9pm ET • 
+                <a href="https://upenn.zoom.us/j/99422219429?pwd=iLCKTdVLtCGtuz8MOlan1tFaO2xdJC.1"><em>Meeting Link</em></a>
+            </strong></p>
         </div>
+
+        <!-- https://upenn.zoom.us/j/99422219429?pwd=iLCKTdVLtCGtuz8MOlan1tFaO2xdJC.1 -->
+
 
         <a href="/" class="logo">PACT</a>
 
